<?xml version="1.0"?>
<package format="2">
  <name>moose_gazebo</name>
  <version>0.1.0</version>
  <description>Launch files to use Moose in Gazebo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>moose_control</exec_depend>
  <exec_depend>moose_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
